<resources>
    <string name="app_name">weather</string>
    <string name="password">Password:</string>
    <string name="email">E-mail:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="Name"> Name: </string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Hourly</string>
    <string name="menu_slideshow">Today</string>
    <string name="monthly">Monthly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>