<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/today"
            android:icon="@drawable/ic_today"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_hourly"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/Monthly"
            android:icon="@drawable/ic_month"
            android:title="@string/monthly" />
    </group>

    <item android:title="other">
        <menu>
            <item android:id="@+id/air"
                android:title="Air Quality"
                android:icon="@drawable/ic_air"/>

            <item android:id="@+id/health"
                android:title="Health and Activities"
                android:icon="@drawable/ic_health"/>

            <item android:id="@+id/radar"
                android:title="Radar"
                android:icon="@drawable/ic_radar"/>
            <item android:id="@+id/news"
                android:title="News"
                android:icon="@drawable/ic_news"/>

        </menu>
    </item>
</menu>